content/_generated-doc/2.7/config/quarkus-vertx-http-config-group-body-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-body-config_configuration]]link:#quarkus-vertx-http-config-group-body-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.handle-file-uploads]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.handle-file-uploads[quarkus.http.body.handle-file-uploads]`

[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally. 
 If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.uploads-directory]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.uploads-directory[quarkus.http.body.uploads-directory]`

[.description]
--
The directory where the files sent using `multipart/form-data` should be stored. 
 Either an absolute path or a path relative to the current directory of the application process.
--|string 
|`${java.io.tmpdir}/uploads`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.merge-form-attributes]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.merge-form-attributes[quarkus.http.body.merge-form-attributes]`

[.description]
--
Whether the form attributes should be added to the request parameters. 
 If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.delete-uploaded-files-on-end]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.delete-uploaded-files-on-end[quarkus.http.body.delete-uploaded-files-on-end]`

[.description]
--
Whether the uploaded files should be removed after serving the request. 
 If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise the files will be left there forever.
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.preallocate-body-buffer]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.preallocate-body-buffer[quarkus.http.body.preallocate-body-buffer]`

[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value. 
 If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise the body buffer is pre-allocated to 1KB, and is resized dynamically
--|boolean 
|`false`

|===