content/_generated-doc/3.6/config/quarkus-vertx-http-config-group-body-config.adoc

:summaryTableId: quarkus-vertx-http-config-group-body-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-body-config_configuration]]link:#quarkus-vertx-http-config-group-body-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.handle-file-uploads]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.handle-file-uploads[quarkus.http.body.handle-file-uploads]`


[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally.

If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_HANDLE_FILE_UPLOADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_HANDLE_FILE_UPLOADS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.uploads-directory]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.uploads-directory[quarkus.http.body.uploads-directory]`


[.description]
--
The directory where the files sent using `multipart/form-data` should be stored.

Either an absolute path or a path relative to the current directory of the application process.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_UPLOADS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_UPLOADS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${java.io.tmpdir}/uploads`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.merge-form-attributes]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.merge-form-attributes[quarkus.http.body.merge-form-attributes]`


[.description]
--
Whether the form attributes should be added to the request parameters.

If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_MERGE_FORM_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_MERGE_FORM_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.delete-uploaded-files-on-end]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.delete-uploaded-files-on-end[quarkus.http.body.delete-uploaded-files-on-end]`


[.description]
--
Whether the uploaded files should be removed after serving the request.

If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise, the files will be left there forever.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_DELETE_UPLOADED_FILES_ON_END+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_DELETE_UPLOADED_FILES_ON_END+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.preallocate-body-buffer]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.preallocate-body-buffer[quarkus.http.body.preallocate-body-buffer]`


[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value.

If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise, the body buffer is pre-allocated to 1KB, and is resized dynamically

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_PREALLOCATE_BODY_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_PREALLOCATE_BODY_BUFFER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.http.body.multipart.file-content-types]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.http.body.multipart.file-content-types[quarkus.http.body.multipart.file-content-types]`


[.description]
--
A comma-separated list of `ContentType` to indicate whether a given multipart field should be handled as a file part. You can use this setting to force HTTP-based extensions to parse a message part as a file based on its content type. For now, this setting only works when using RESTEasy Reactive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_BODY_MULTIPART_FILE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_BODY_MULTIPART_FILE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.handle-file-uploads]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.handle-file-uploads[quarkus.management.body.handle-file-uploads]`


[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally.

If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_HANDLE_FILE_UPLOADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_HANDLE_FILE_UPLOADS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.uploads-directory]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.uploads-directory[quarkus.management.body.uploads-directory]`


[.description]
--
The directory where the files sent using `multipart/form-data` should be stored.

Either an absolute path or a path relative to the current directory of the application process.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_UPLOADS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_UPLOADS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${java.io.tmpdir}/uploads`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.merge-form-attributes]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.merge-form-attributes[quarkus.management.body.merge-form-attributes]`


[.description]
--
Whether the form attributes should be added to the request parameters.

If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_MERGE_FORM_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_MERGE_FORM_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.delete-uploaded-files-on-end]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.delete-uploaded-files-on-end[quarkus.management.body.delete-uploaded-files-on-end]`


[.description]
--
Whether the uploaded files should be removed after serving the request.

If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise, the files will be left there forever.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_DELETE_UPLOADED_FILES_ON_END+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_DELETE_UPLOADED_FILES_ON_END+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.preallocate-body-buffer]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.preallocate-body-buffer[quarkus.management.body.preallocate-body-buffer]`


[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value.

If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise, the body buffer is pre-allocated to 1KB, and is resized dynamically

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_PREALLOCATE_BODY_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_PREALLOCATE_BODY_BUFFER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-http-config-group-body-config_quarkus.management.body.multipart.file-content-types]]`link:#quarkus-vertx-http-config-group-body-config_quarkus.management.body.multipart.file-content-types[quarkus.management.body.multipart.file-content-types]`


[.description]
--
A comma-separated list of `ContentType` to indicate whether a given multipart field should be handled as a file part. You can use this setting to force HTTP-based extensions to parse a message part as a file based on its content type. For now, this setting only works when using RESTEasy Reactive.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_MULTIPART_FILE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_MULTIPART_FILE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===